[package]
name = "audit-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-05-28T14:18:27.692305

// patch: 2026-06-05T21:41:32.307685

// patch: 2026-06-12T19:50:46.153835

// patch: 2026-06-21T03:13:50.769215

// patch: 2026-06-21T19:50:46.153830
