[package]
name = "usage-meter"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-05-29T06:55:23.076920

// patch: 2026-05-31T08:46:09.230765

// patch: 2026-06-07T06:55:23.076915

// patch: 2026-06-14T21:41:32.307680

// patch: 2026-06-15T14:18:27.692295
